plugins {
    id 'groovy'
    id 'java-library'
}

repositories {
    mavenCentral()
    maven {
        url 'https://repo.jenkins-ci.org/public'
    }
}

dependencies {
    api libs.groovy.all
    api libs.groovy.all
    api libs.jakarta.servlet.api
    api libs.jenkins.core
    api libs.jenkins.plugins.branch.api
    api libs.jenkins.plugins.git
    api libs.jenkins.plugins.github.branch.source
    api libs.jenkins.plugins.parameterized.scheduler
    api libs.jenkins.plugins.pipeline.utility.steps
    api libs.jenkins.plugins.workflow.basic.steps
    api libs.jenkins.plugins.workflow.cps
    api libs.jenkins.plugins.workflow.multibranch
    api libs.jenkins.plugins.workflow.step.api
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

compileGroovy {
    groovyOptions.with {
        configurationScript = file('gradle/config.groovy')
        fileExtensions = ['java', 'groovy', 'gdsl']
        /* Enable deep reflection for the following packages to silence the warnings produced by
         * using Groovy 2.4 on Java 9+ */
        forkOptions.jvmArgs = [
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.security=ALL-UNNAMED',
            '--add-opens=java.base/java.net=ALL-UNNAMED',
        ]
    }
}


sourceSets {
    main {
        groovy {
            filter.include '**/*.gdsl'
        }
    }
}